--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>Test Page</h1>
-  </body>
+<head>
+  <title>Assignment 1 - Responsive Layout</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+<h1>Our Menu</h1>
+
+<div class="row">
+
+  <article class="col-lg-4 col-md-6">
+    <div>
+      <header id="hd1">
+        <h2>Chicken</h2>
+      </header>
+      <div class="articlebody">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+  </article>
+
+  <article class="col-lg-4 col-md-6">
+    <div>
+      <header id="hd2">
+        <h2>Beef</h2>
+      </header>
+      <div class="articlebody">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+  </article>
+
+  <article class="col-lg-4 col-md-12">
+    <div>
+      <header id="hd3">
+        <h2>Sushi</h2>
+      </header>
+      <div class="articlebody">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </div>
+    </div>
+  </article>
+
+</div>
+
+</body>
 </html>
